Fixed a problem where a user could not zoom on mobile

--- a/Client/stylesheets/mobile/_header.scss
+++ b/Client/stylesheets/mobile/_header.scss
@@ -1,4 +1,5 @@
 .header {
+    position: relative;
     width: 100%;
     background: #1cdb56;
     border-bottom: 1px solid darken($color: #1cdb56, $amount: 15);
